# pbr

./: .gitignore  Cargo.toml
src/: brdf.rs  bvh.rs  light.rs  main.rs  material.rs  medium.rs  objects.rs  path_trace.rs  phase.rs  plymesh.rs  random.rs  scene.rs  scene_description.rs  spectrum.rs  vol_trace.rs
src/brdf/: conductor.rs  dielectric.rs  phong.rs
src/material/: ior-copper_Johnson.csv  ior-glass_Rubin.csv  ior-gold_Johnson.csv  ior-silver_Johnson.csv  physical.rs
src/objects/: voxel.rs
src/spectrum/: physical.rs  pure-ozone-absorption-coeff-sea-level-serdyuchenko.csv  rgb.rs
viewer/: Cargo.toml
viewer/src/: egui_composite.wgsl  egui_setup.rs  main.rs  tonemap.rs  viewer.rs  viewer_blit.wgsl  viewer_sphere.wgsl
viewer/src/tonemap/: krawczyk_2005.rs  none.rs
