[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.21.0"
clap = { version = "4.5.53", features = ["derive"] }
egui = "0.31.0"
egui-wgpu = "0.31.0"
egui-winit = "0.31.0"
exr = "1.73.0"
glam = { version = "0.30.0", features = ["bytemuck"] }
image = { version = "0.25.5", default-features = false, features = ["png"] }
pollster = "0.4.0"
wgpu = "24.0.1"
winit = "0.30.9"
